@@ -524,7 +524,7 @@ to show entries assign to that name.
 
 LIST_UNLINKEDEXITS=\
 Command  : LIST\n\r\
-Usage    : LIST UNLINKEDEXITS (LOG)\n\r\
+Usage    : LIST UNLINKEDEXITS (LOG) (AREA)\n\r\
 Example  : list unlinkedexits\n\r\
 Example  : list unlinkedexits log\n\r\
 Lists all the rooms which have directions for which an exit has been defined, \
@@ -989,12 +989,20 @@ Adding a mask parameter will limit the view of resources only to those with thos
 
 LIST_ONEWAYDOORS=\
 Command  : LIST\n\r\
-Usage    : LIST ONEWAYDOORS (LOG)\n\r\
+Usage    : LIST ONEWAYDOORS (LOG) (AREA)\n\r\
 Example  : list onewaydoors\n\r\
 Example  : list onewaydoors log\n\r\
 Lists all the rooms in your world with at least one direction where it links to another room, \
 but that room does NOT link back to it.  Could be indicative of a problem?  Adding a log \
 parameter will dump this list to your mud.log.
+
+LIST_ORPHANS=\
+Command  : LIST\n\r\
+Usage    : LIST ORPHANS (LOG) (AREA)\n\r\
+Example  : list orphans\n\r\
+Example  : list orphans log\n\r\
+Lists all the rooms in your world that lack any direct room links into them (portals don't count). \
+Could be indicative of a problem?  Adding a log parameter will dump this list to your mud.log.
 
 LIST_CHANTS=\
 Command  : LIST\n\r\
